- Rudi, Thu Feb  1 13:27:15 MET 2007
  Created the file HISTORY and the file README.DEV

- Pest, Thu Feb  1 20:45 MET 2007
  Added description for attribute "model" in commandref.html